# report-card

./: extract-camelot.py  extract.py  load.py  main.py  nevada_report_clean.csv  pyproject.toml  reportcard-page-10-table-1.csv  reportcard-page-100-table-1.csv  reportcard-page-101-table-1.csv  reportcard-page-102-table-1.csv  reportcard-page-103-table-1.csv  reportcard-page-103-table-2.csv  reportcard-page-104-table-1.csv  reportcard-page-105-table-1.csv  reportcard-page-106-table-1.csv  reportcard-page-107-table-1.csv  reportcard-page-108-table-1.csv  reportcard-page-109-table-1.csv  reportcard-page-109-table-2.csv  reportcard-page-11-table-1.csv  reportcard-page-110-table-1.csv  reportcard-page-111-table-1.csv  reportcard-page-112-table-1.csv  reportcard-page-113-table-1.csv  reportcard-page-114-table-1.csv  reportcard-page-115-table-1.csv  reportcard-page-116-table-1.csv  reportcard-page-117-table-1.csv  reportcard-page-118-table-1.csv  reportcard-page-119-table-1.csv  reportcard-page-12-table-1.csv  reportcard-page-12-table-2.csv  reportcard-page-120-table-1.csv  reportcard-page-121-table-1.csv  reportcard-page-122-table-1.csv  reportcard-page-123-table-1.csv  reportcard-page-124-table-1.csv  reportcard-page-125-table-1.csv  reportcard-page-126-table-1.csv  reportcard-page-127-table-1.csv  (+118 more)
Data/: AnnualDropoutRateForthePriorSchoolYear.csv  AverageClassSize.csv  ClassesNotTaughtByHighlyQualifiedTeachers.csv  CreditDeficiencyByGrade10.csv  CreditDeficiencyByGrade11.csv  CreditDeficiencyByGrade12.csv  CreditDeficiencyByGrade9.csv  DistrictSchoolRatingReport.csv  (+11 more)
